objects/CIJob__c.object
<CustomObject>
    <fields>
        <fullName>AccelQCIJobId__c</fullName>
        <label>AccelQ CI Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CI Jobs</relationshipLabel>
        <relationshipName>CI_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CIJobInstanceId__c</fullName>
        <externalId>true</externalId>
        <label>CI Job Instance Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JobCompletedOn__c</fullName>
        <label>Job Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JobStartedOn__c</fullName>
        <label>Job Started On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <label>Parent Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RunTimeAttributes__c</fullName>
        <label>Run Time Attributes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StatusUpdatedOn__c</fullName>
        <label>Status Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestCasesFailed__c</fullName>
        <label>#Test Cases Failed</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestCasesNotRun__c</fullName>
        <label>#Test Cases Not Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestCasesPassed__c</fullName>
        <label>#Test Cases Passed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTestCases__c</fullName>
        <label>#Total Test Cases</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserStory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>CI Jobs</relationshipLabel>
        <relationshipName>CI_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CI Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>TestCasesFailed__c</columns>
        <columns>TestCasesNotRun__c</columns>
        <columns>TestCasesPassed__c</columns>
        <columns>TotalTestCases__c</columns>
        <columns>AccelQCIJobId__c</columns>
        <columns>JobStartedOn__c</columns>
        <columns>JobCompletedOn__c</columns>
        <columns>UserStory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CI-{0}</displayFormat>
        <label>Job #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CI Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>